prefer while ! over until

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -26,6 +26,9 @@ Lint/MissingSuper:
 Style/Documentation:
   Enabled: false
 
+Style/NegatedWhile:
+  Enabled: false
+
 Style/StringLiterals:
   EnforcedStyle: double_quotes
 
