--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -4,9 +4,7 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v1
     - name: Set up Ruby 2.6
@@ -18,3 +16,6 @@ jobs:
         gem install bundler
         bundle install --jobs 4 --retry 3
         bundle exec rake
+    - name: Rubocop
+      run: |
+        bundle exec rubocop
