--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -16,7 +16,7 @@ jobs:
         ruby-version: ${{ matrix.ruby_version }}
     - name: Build and test with Rake
       run: |
-        gem install bundler
+        gem install bundler:1.17.3
         bundle install --jobs 4 --retry 3
         bundle exec rake
     - name: Rubocop
