Install bundler and bundle for rubocop

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -32,4 +32,6 @@ jobs:
         ruby-version: 2.6.x
     - name: Rubocop
       run: |
+        gem install bundler
+        bundle install --jobs 4 --retry 3
         bundle exec rubocop
